# simple_antivirus

./: README.txt
allVirusesBackup/: file11.txt
antivirus/: CMakeLists.txt  database.txt  main.cpp
antivirus/headers/: antivirus.h  controller.h  dataStructure.h
antivirus/sources/: antivirus.cpp  controller.cpp
